# GenericAgent

./: .gitignore  FRONTEND_BEAUTY_NOTEBOOK.md  GA桌面壳-参考方案.md  README.md  TMWebDriver.py  agentmain.py  dev_notebook.md  diagnose_api.py  ga  ga.cmd  ga.py  genericagent_acp_bridge.py  installation.md  installation_zh.md  llmcore.py  mykey_template.py  pyproject.toml
assets/: configure_mykey.py  ga_httpapp.py  ga_ultraplan.py  global_mem_insight_template.txt  global_mem_insight_template_en.txt  sys_prompt.txt
claude-max-proxy/: proxy.py  tool_name_mapping.json
command/: __init__.py  __main__.py  cli.py  command-install.cmd  command.cmd
frontends/: conductor.html  conductor.py  continue_cmd.py  desktop_bridge.py  fsapp.py  ga_contract_probe.py  plan_state.py  slash_cmds.py  stapp.py  tui_v3.py  tuiapp_v2.py  wechatapp.py
ga_cli/: cli.py
memory/: autonomous_operation_sop.md  computer_use.md  deliverable_audit_sop.md  goal_hive_master_duty.md  goal_hive_sop.md  keychain.py  ljqCtrl.py  ljqCtrl_sop.md  morphling_sop.md  plan_sop.md  project_mode_sop.md  scheduled_task_sop.md  subagent.md  tmwebdriver_sop.md  ui_detect.py  ultraplan_sop.md
plugins/: project_mode.py
reflect/: goal_mode.py  scheduler.py
skills/DeepSearch/: .env.example  DeepSearch_SOP.md  README.md  SKILL.md  pyproject.toml
skills/DeepSearch/deepsearch/: __init__.py  __main__.py  cli.py  config.py  engine.py  server.py  tools.py
skills/DeepSearch/scripts/: __init__.py  _creds.py  _http.py  dual_search.py  grok_search.py  search_planning.py  tavily_search.py  web_fetch.py  web_map.py
(+61 files in other folders)
