[project]
name = "deepsearch"
version = "1.0.0"
description = "多源交叉验证深度搜索引擎 — 双引擎（Grok + Tavily）+ 证据约束 + MCP Server"
requires-python = ">=3.10"
authors = [
    { name = "DeepSearch Team" },
]
dependencies = [
    "requests>=2.28",
    "mcp>=1.0.0",
]

[project.scripts]
deepsearch = "deepsearch.cli:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["deepsearch*", "scripts*"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
